split eager and lazy between completablefuture and fastfuture